# examples

./: README.md
epiphany/: 0001-pal-symbolmangling.patch  0002-pal-matmul-dev-epiphany-linker.patch  README.md  build-pal.sh  setup-epiphany-sdk-on-target.sh
epiphany/clprototype/: README.md
epiphany/clprototype/clman/: clman  mr.sh  nohup.out  run_wordc.sh  wordc
epiphany/clprototype/meta-test/: prepareyoctobuild.sh
epiphany/clprototype/meta-test/conf/: layer.conf
epiphany/clprototype/meta-test/local_conf/: bblayers.conf  local.conf
epiphany/clprototype/meta-test/recipes-core/busybox/: busybox_1.24.1.bbappend
epiphany/clprototype/meta-test/recipes-core/busybox/config/: ntp.conf  parallella.cfg
epiphany/clprototype/meta-test/recipes-parallella/images/: hdmi-image-clman.bb
epiphany/clprototype/meta-test/recipes-parallella/sysadmin/: paraservices.bb  parausers.bb
epiphany/clprototype/meta-test/recipes-parallella/sysadmin/files/: 99-epiphany.rules  ntpd
epiphany/clprototype/wordc/: configure.ac
epiphany/clprototype/wordc/src/devices/epiphany/src/: e_clcore.c  e_clcore.h  e_wordc.c
epiphany/clprototype/wordc/src/main/src/: clcomms.c  clcomms.h  clcore.c  clcore.h  wordc.c
epiphany/clprototype/wordc/sub/devices/: README.md  configure.ac
epiphany/clprototype/wordc/sub/devices/epiphany/: Makefile.am  configure.ac
epiphany/clprototype/wordc/sub/host/: Makefile.am  configure.ac
epiphany/clprototype/wordc/sub/host/main/: Makefile.am
epiphany/dma/: Makefile.am  README.md  bootstrap.sh  build.sh  configure.ac
epiphany/dma/epiphany/: Makefile  e_dma.c
epiphany/dma/host/: Makefile  dma  dma.c
epiphany/dma/src/devices/epiphany/src/: e_dma.c
epiphany/dma/src/main/src/: dma.c
epiphany/dma/sub/devices/: configure.ac
epiphany/dma/sub/devices/epiphany/: configure.ac
epiphany/dma/sub/host/: configure.ac
epiphany/dma/sub/host/main/: Makefile.am
epiphany/hello-world/: configure.ac
epiphany/hello-world/epiphany/: Makefile
epiphany/hello-world/host/: Makefile  hello_world.c
epiphany/hello-world/src/devices/epiphany/src/: e_hello_world.c
epiphany/hello-world/src/main/src/: hello_world.c
epiphany/hello-world/sub/devices/: Makefile.am  configure.ac
epiphany/hello-world/sub/devices/epiphany/: Makefile.am  README.md  configure.ac
epiphany/hello-world/sub/host/: Makefile.am  README.md  configure.ac
epiphany/hello-world/sub/host/main/: Makefile.am
epiphany/mailbox/: Makefile
epiphany/mailbox/epiphany/: Makefile  e_mailbox.c
epiphany/mailbox/host/: Makefile  epiphany.h  mailbox.c
epiphany/mailbox/kernel/: epiphany.c  epiphany.h
epiphany/memorymap/epiphany/: Makefile  e_mem_map.c
epiphany/memorymap/host/: Makefile  mem_map.c
epiphany/mutex/epiphany/: Makefile  e_mutex.c
epiphany/mutex/host/: Makefile  mutex  mutex.c
epiphany/pal-hello-team/: Makefile
epiphany/pal-hello-team/epiphany/: Makefile  team_task.c
epiphany/pal-hello-team/host/: Makefile  team_example.c
epiphany/pal-hello-team/include/: common.h
epiphany/pal-hello-world/: Makefile
epiphany/pal-hello-world/epiphany/: Makefile  hello_task.c
epiphany/pal-hello-world/host/: Makefile  pal_hello.c
epiphany/pal-hello-world/include/: common.h
epiphany/simplememory/epiphany/: Makefile  e_memory.c
epiphany/simplememory/host/: Makefile  simplememory.c
fpga/OfficialBitstreams/: README.md
kernel/: LinuxProfile.xml  PathsAndSymbols.xml  YoctoPathsNSymbols.xml
kernel/bank_bram/: .cproject  .project  Makefile  bank_bram.c  bank_bram.h  bram_load.sh
kernel/bank_bram_test/: .cproject  .project  Makefile  bank_bram_test.c
kernel/xdma_demo/: .cproject  .project  Makefile
kernel/xdma_dev/: .cproject  .project  Makefile  xdma.c
kernel/xdma_lib/: .cproject  .project  Makefile  README.md
